--- a/client/index.html
+++ b/client/index.html
@@ -7,13 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="main.css">
     <!-- Bootstrap CSS -->
+
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
   </head>
   <body>
-    <p>blopbopb</p>
+    <div class="HUD">
+        <h2>SHAKE THE DICES !!</h2>
+        <div id="throwDice"><img src="logoDice.png"></div>
+        <div id="resultDice">Result</div>
+        <h2>Player 1</h2>
+        <p>Barre de respect</p>
+        <h2>Player 2</h2>
+        <p>Barre de respect</p>
+    </div>
+   
+
     <div id="case"></div>
 
-
+    <!-- <script scr="dice/dice.js"></script> -->
     <script src="js/blop.js"></script>
     <!-- <script src="https://cdn.rawgit.com/akabab/superhero-api/0.2.0/api"></script> -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
