--- a/client/index.html
+++ b/client/index.html
@@ -12,8 +12,11 @@
   </head>
   <body>
     <div class="HUD">
-        <h2>SHAKE THE DICES !!</h2>
-        <div id="throwDice"><img src="logoDice.png"></div>
+      <div>
+          <h2>ROLL THE DICE >> </h2>
+          <div id="throwDice"><img src="https://lh3.ggpht.com/A7X8JLJb4q3KwZJ_6cD7Rs8si8k5_l6Ud605JHT6Q2JtgI5sYobZfLVSqc1TY_Klgl0=w300"></div>
+      </div>
+        
         <div id="resultDice">Result</div>
         <h2>Player 1</h2>
         <p>Barre de respect</p>
