--- a/client/index.html
+++ b/client/index.html
@@ -16,19 +16,19 @@
           <h2>ROLL THE DICE >> </h2>
           <div id="throwDice"><img src="https://lh3.ggpht.com/A7X8JLJb4q3KwZJ_6cD7Rs8si8k5_l6Ud605JHT6Q2JtgI5sYobZfLVSqc1TY_Klgl0=w300"></div>
       </div>
-        
+
         <div id="resultDice">Result</div>
         <h2>Player 1</h2>
         <p>Barre de respect</p>
         <h2>Player 2</h2>
         <p>Barre de respect</p>
     </div>
-   
+
 
     <div id="case"></div>
 
     <!-- <script scr="dice/dice.js"></script> -->
-    <script src="js/blop.js"></script>
+    <script type='module' src="js/blop.js"></script>
     <!-- <script src="https://cdn.rawgit.com/akabab/superhero-api/0.2.0/api"></script> -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
