--- a/client/index.html
+++ b/client/index.html
@@ -1,37 +1,38 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>Boardgame</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="main.css">
-    <!-- Bootstrap CSS -->
 
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
-  </head>
-  <body>
+<head>
+  <title>Boardgame</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="main.css">
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+</head>
+
+<body>
+  <div class="container">
+
     <div class="HUD">
-      <div>
-          <h2>ROLL THE DICE >> </h2>
-          <div id="throwDice"><img src="https://lh3.ggpht.com/A7X8JLJb4q3KwZJ_6cD7Rs8si8k5_l6Ud605JHT6Q2JtgI5sYobZfLVSqc1TY_Klgl0=w300"></div>
+      <h2>ROLL THE DICE</h2>
+      <div id="throwDice">
+        <img src="https://lh3.ggpht.com/A7X8JLJb4q3KwZJ_6cD7Rs8si8k5_l6Ud605JHT6Q2JtgI5sYobZfLVSqc1TY_Klgl0=w300">
       </div>
-        
-        <div id="resultDice">Result</div>
-        <h2>Player 1</h2>
-        <p>Barre de respect</p>
-        <h2>Player 2</h2>
-        <p>Barre de respect</p>
+      <div id="resultDice">Result</div>
+      <h2 class="player1"> Player 1</h2>
+      <p>Barre de respect</p>
+      <h2 class="player2">Player 2</h2>
+      <p>Barre de respect</p>
     </div>
-   
-
     <div id="case"></div>
 
-    <!-- <script scr="dice/dice.js"></script> -->
-    <script src="js/blop.js"></script>
-    <!-- <script src="https://cdn.rawgit.com/akabab/superhero-api/0.2.0/api"></script> -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
+  </div>
+  <!-- <script scr="dice/dice.js"></script> -->
+  <script src="js/blop.js"></script>
+  <!-- <script src="https://cdn.rawgit.com/akabab/superhero-api/0.2.0/api"></script> -->
+</body>
+
 </html>
