integration movement + fixes mega reloums

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,6 @@
 
 <body>
   <div class="container">
-
     <div class="HUD">
       <h2>ROLL THE DICE</h2>
       <div id="throwDice">
@@ -28,10 +27,10 @@
       <p>Barre de respect</p>
     </div>
     <div id="case"></div>
-
   </div>
   <!-- <script scr="dice/dice.js"></script> -->
-  <script src="js/blop.js"></script>
+  <script type="module" src="js/blop.js"></script>
+
   <!-- <script src="https://cdn.rawgit.com/akabab/superhero-api/0.2.0/api"></script> -->
 </body>
 
