petites modifs pour INJECTER LE TEXTE QQ PART

--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
         <p>Barre de respect</p>
         <h2>Player 2</h2>
         <p>Barre de respect</p>
+        <div id="textDisplay"> coucou </div>
     </div>
    
 
