--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,7 @@
       <h2 class="player2">Player 2</h2>
       <p>Barre de respect</p>
     </div>
+    <p id="history"></p>
     <div id="case"></div>
   </div>
   <!-- <script scr="dice/dice.js"></script> -->
