--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
     <div id="case"></div>
 
     <!-- <script scr="dice/dice.js"></script> -->
-    <script type='module' src="js/blop.js"></script>
+    <script type="module" src="js/blop.js"></script>
     <!-- <script src="https://cdn.rawgit.com/akabab/superhero-api/0.2.0/api"></script> -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
