--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,7 @@
       <h2 class="player2">Player 2</h2>
       <p>Barre de respect</p>
       <progress id="health" value="100" max="100"></progress>
+      <div id="message"></div>
     </div>
     <p id="history"></p>
     <div id="case"></div>
