--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+  <h2 id="titre"> laPetiteSoeur.exe</h2>
   <div class="container">
     <div class="HUD">
       <h2>ROLL THE DICE</h2>
