--- a/client/index.html
+++ b/client/index.html
@@ -38,4 +38,10 @@
 
   <!-- <script src="https://cdn.rawgit.com/akabab/superhero-api/0.2.0/api"></script> -->
 </body>
+<footer>
+  <audio controls autoplay loop>
+    <source src="/assets/blop.mp3" type="audio/mpeg"> Your browser does not support the audio element.
+  </audio>
+</footer>
+
 </html>
