--- a/client/index.html
+++ b/client/index.html
@@ -25,10 +25,10 @@
       <div id="resultDice">Result</div>
       <h2 class="player1"> Player 1</h2>
       <p>Barre de respect</p>
-      <progress id="health" value="100" max="100"></progress>
+      <progress id="health" value="100" min="0" max="100"></progress>
       <h2 class="player2">Player 2</h2>
       <p>Barre de respect</p>
-      <progress id="health" value="100" max="100"></progress>
+      <progress id="health" value="100" min="0" max="100"></progress>
       <div id="message"></div>
     </div>
     <p id="history"></p>
